fix register on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -47,8 +47,9 @@ ul{
 
 
 .screen{
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  min-height: 100vh;
+  padding: $offset-5;
   display: flex;
   justify-content: center;
   background: $color-dark-gray-5;
