--- a/src/components/pages/Register/style.scss
+++ b/src/components/pages/Register/style.scss
@@ -2,12 +2,9 @@
 
 
 .register{
-    max-width: 90rem;
-    min-width: 25rem;
-    width: 55%;
-    padding-bottom: $offset-5;
-    justify-content: center;
-    align-items: center;
+
+
+
 }
 
 .register__header{
